--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,11 +23,33 @@
     "@typescript-eslint/no-misused-promises": "error",
     "prefer-const": "error",
     "no-var": "error",
-    "no-console": "warn"
+    "no-console": "warn",
+    "no-debugger": "error",
+    "no-alert": "error",
+    "no-eval": "error",
+    "no-implied-eval": "error",
+    "no-script-url": "error",
+    "prefer-template": "error",
+    "template-curly-spacing": "error",
+    "object-curly-spacing": ["error", "always"],
+    "array-bracket-spacing": ["error", "never"],
+    "comma-dangle": ["error", "always-multiline"],
+    "semi": ["error", "always"],
+    "quotes": ["error", "single", { "avoidEscape": true }],
+    "indent": ["error", 2],
+    "max-len": ["warn", { "code": 100, "ignoreUrls": true }],
+    "no-warning-comments": ["warn", { "terms": ["todo", "fixme", "hack", "xxx"], "location": "anywhere" }]
   },
   "overrides": [
     {
-      "files": ["tests/**/*.ts"],
+      "files": ["tests/**/*.ts", "tests/**/*.js"],
+      "rules": {
+        "no-console": "off",
+        "@typescript-eslint/no-explicit-any": "off"
+      }
+    },
+    {
+      "files": ["scripts/**/*.js"],
       "rules": {
         "no-console": "off"
       }
