--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Playwright automation testing project with best practices",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "playwright test",
     "test:headed": "playwright test --headed",
@@ -13,9 +14,17 @@
     "test:install-deps": "playwright install --with-deps",
     "test:codegen": "playwright codegen",
     "test:trace": "playwright test --trace on",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "type-check": "tsc --noEmit"
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "type-check": "tsc --noEmit",
+    "validate:locators": "node scripts/validate-locators.js",
+    "validate:naming": "node scripts/validate-naming-conventions.js",
+    "validate:console": "node scripts/validate-console-clean.js",
+    "validate:all": "npm run validate:locators && npm run validate:naming && npm run validate:console",
+    "ci:lint": "npm run lint",
+    "ci:validate": "npm run validate:all",
+    "ci:test": "playwright test --reporter=html,junit",
+    "ci:coverage": "playwright test --reporter=html,junit --coverage"
   },
   "keywords": [
     "playwright",
