Fix Console Clean Validation 1

--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,8 @@ playwright-report/
 playwright/.cache/
 blob-report/
 playwright/.cache/
+
+# Playwright
+/playwright-report/
+/blob-report/
+/playwright/.cache/
