--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ci:lint": "npm run lint",
     "ci:validate": "npm run validate:all",
     "ci:test": "playwright test --reporter=html,junit",
-    "ci:coverage": "playwright test --reporter=html,junit --coverage"
+    "ci:coverage": "c8 --reporter=html --reporter=json --reporter=text --reporter=lcov --output-dir=coverage playwright test --reporter=html,junit",
+    "coverage": "c8 --reporter=html --reporter=text playwright test"
   },
   "keywords": [
     "playwright",
@@ -40,10 +41,36 @@
     "@types/node": "^24.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "c8": "^10.1.3",
     "eslint": "^8.57.0",
     "typescript": "^5.3.0"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "c8": {
+    "all": true,
+    "include": [
+      "e2e/**/*.ts",
+      "pages/**/*.ts",
+      "utils/**/*.ts",
+      "locators/**/*.js"
+    ],
+    "exclude": [
+      "node_modules/**",
+      "test-results/**",
+      "playwright-report/**",
+      "coverage/**",
+      "**/*.spec.ts",
+      "**/*.test.ts"
+    ],
+    "reporter": ["html", "json", "text", "lcov"],
+    "outputDirectory": "coverage",
+    "thresholds": {
+      "lines": 80,
+      "functions": 80,
+      "branches": 80,
+      "statements": 80
+    }
   }
 }
