--- a/package.json
+++ b/package.json
@@ -14,16 +14,27 @@
 		"test:install-deps": "playwright install --with-deps",
 		"test:codegen": "playwright codegen",
 		"test:trace": "playwright test --trace on",
+		"test:coverage": "c8 playwright test",
+		"test:parallel": "playwright test --workers=4",
+		"test:shard": "playwright test --shard=1/3",
+		"test:chromium": "playwright test --project=chromium",
+		"test:firefox": "playwright test --project=firefox",
+		"test:webkit": "playwright test --project=webkit",
+		"test:mobile": "playwright test --project=\"Mobile Chrome\" --project=\"Mobile Safari\"",
 		"lint": "eslint . --ext .ts,.js",
 		"lint:fix": "eslint . --ext .ts,.js --fix",
 		"type-check": "tsc --noEmit",
-		"validate:locators": "node scripts/validate-locators.js",
-		"validate:naming": "node scripts/validate-naming-conventions.js",
-		"validate:console": "node scripts/validate-console-clean.js",
+		"validate:locators": "tsx scripts/validate-locators.ts",
+		"validate:naming": "tsx scripts/validate-naming-conventions.ts",
+		"validate:console": "tsx scripts/validate-console-clean.ts",
 		"validate:all": "npm run validate:locators && npm run validate:naming && npm run validate:console",
 		"ci:lint": "npm run lint",
 		"ci:validate": "npm run validate:all",
-		"ci:test": "playwright test --reporter=html,junit"
+		"ci:test": "playwright test --reporter=html,junit",
+		"ci:coverage": "c8 playwright test --reporter=html,junit",
+		"preinstall": "npx playwright install --with-deps chromium",
+		"clean": "rm -rf test-results playwright-report coverage",
+		"clean:all": "npm run clean && rm -rf node_modules package-lock.json"
 	},
 	"keywords": [
 		"playwright",
@@ -41,6 +52,7 @@
 		"@typescript-eslint/parser": "^6.21.0",
 		"c8": "^10.1.3",
 		"eslint": "^8.57.0",
+		"tsx": "^4.20.3",
 		"typescript": "^5.3.0"
 	},
 	"engines": {
