--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
     "array-bracket-spacing": ["error", "never"],
     "comma-dangle": ["error", "always-multiline"],
     "semi": ["error", "always"],
-    "quotes": ["error", "single", { "avoidEscape": true }],
+    "quotes": ["error", "single", { "avoidEscape": true, "allowTemplateLiterals": true }],
     "indent": ["error", 2],
     "max-len": ["warn", { 
       "code": 100, 
