--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,7 +145,14 @@ jobs:
     name: Playwright E2E Tests
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    needs: lint
+    needs:
+      [
+        lint,
+        validate-branch-name,
+        validate-console,
+        validate-locators,
+        validate-naming,
+      ]
     strategy:
       fail-fast: false
       matrix:
